Add language support for errors

--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -5,3 +5,6 @@ content.prompt=Inhoud
 add=Toevoegen
 delete=Verwijderen
 done=Gereed
+note_not_found=Notitie niet gevonden:
+note_title_empty=De titel van de notitie mag niet leeg zijn.
+note_title_duplicate=Er bestaat al een notitie met deze titel.
