--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -5,3 +5,6 @@ content.prompt=Con\u021binut
 add=Adaug\u0103
 delete=\u0218terge
 done=Salveaza
+note_not_found=Nota nu a fost g?sit\u0103:
+note_title_empty=Titlul notei nu poate fi gol.
+note_title_duplicate=O not\u0103 cu acest titlu deja exist\u0103.
