--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -4,7 +4,7 @@ title.prompt=Titlu
 content.prompt=Con\u021binut
 add=Adaug\u0103
 delete=\u0218terge
-done=Salveaza
+done=Salveaz\u0103
 note_not_found=Nota nu a fost g\u0103sit\u0103:
 note_title_empty=Titlul notei nu poate fi gol.
 note_title_duplicate=O not\u0103 cu acest titlu deja exist\u0103.
