Add checkbox for content search

--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -2,6 +2,7 @@ overview.title=Notities: Overzicht
 search.prompt=Zoeken..
 title.prompt=Titel
 content.prompt=Inhoud
+content.search=Inhoud zoeken
 add=Toevoegen
 delete=Verwijderen
 done=Gereed
