--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -2,6 +2,7 @@ overview.title=Note: Prezentare general\u0103
 search.prompt=Caut\u0103...
 title.prompt=Titlu
 content.prompt=Con\u021binut
+content.search=C\u0103utare con\u021binut
 add=Adaug\u0103
 delete=\u0218terge
 done=Salveaz\u0103
