--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -2,6 +2,7 @@ overview.title=Notes: Overview
 search.prompt=Search...
 title.prompt=Title
 content.prompt=Content
+content.search=Search content
 add=Add
 delete=Delete
 done=Done
