Refactor note overview scene: update localization keys and improve code readability, added updating scene after language switch

--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -1,8 +1,8 @@
-overview.title=Notities: Overzicht
-search.prompt=Zoeken..
-title.prompt=Titel
-content.prompt=Inhoud
-content.search=Inhoud zoeken
+overview_title=Notities: Overzicht
+search_prompt=Zoeken...
+title_prompt=Titel
+content_prompt=Inhoud
+content_search=Inhoud zoeken
 add=Toevoegen
 delete=Verwijderen
 done=Gereed
