--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -1,8 +1,8 @@
-overview.title=Note: Prezentare general\u0103
-search.prompt=Caut\u0103...
-title.prompt=Titlu
-content.prompt=Con\u021binut
-content.search=C\u0103utare con\u021binut
+overview_title=Note: Prezentare general\u0103
+search_prompt=Caut\u0103...
+title_prompt=Titlu
+content_prompt=Con\u021binut
+content_search=C\u0103utare con\u021binut
 add=Adaug\u0103
 delete=\u0218terge
 done=Salveaz\u0103
