--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -1,8 +1,8 @@
-overview.title=Notes: Overview
-search.prompt=Search...
-title.prompt=Title
-content.prompt=Content
-content.search=Search content
+overview_title=Notes: Overview
+search_prompt=Search...
+title_prompt=Title
+content_prompt=Content
+content_search=Search content
 add=Add
 delete=Delete
 done=Done
