Small changes to the properties

--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -1,4 +1,4 @@
-overview_title=Notes: Overview
+overview_title=NetNote: Overview
 search_prompt=Search...
 title_prompt=Title
 content_prompt=Content
