--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -1,4 +1,4 @@
-overview_title=Notities: Overzicht
+overview_title=NetNote: Overzicht
 search_prompt=Zoeken...
 title_prompt=Titel
 content_prompt=Inhoud
