--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -1,4 +1,4 @@
-overview_title=Note: Prezentare general\u0103
+overview_title=NetNote: Prezentare general\u0103
 search_prompt=Caut\u0103...
 title_prompt=Titlu
 content_prompt=Con\u021binut
