Add language selection feature and update UI components

--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -9,3 +9,4 @@ done=Done
 note_not_found=Note not found:
 note_title_empty=The note title cannot be empty.
 note_title_duplicate=A note with this title already exists.
+language=English
