--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -9,3 +9,4 @@ done=Gereed
 note_not_found=Notitie niet gevonden:
 note_title_empty=De titel van de notitie mag niet leeg zijn.
 note_title_duplicate=Er bestaat al een notitie met deze titel.
+language=Dutch
