--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -9,3 +9,4 @@ done=Salveaz\u0103
 note_not_found=Nota nu a fost g\u0103sit\u0103:
 note_title_empty=Titlul notei nu poate fi gol.
 note_title_duplicate=O not\u0103 cu acest titlu deja exist\u0103.
+language=Romanian
