Added a collection overview along with frontend ServerUtils for adding and removing collections

--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -1,4 +1,5 @@
 overview_title=NetNote: Overview
+collection_overview_title=NetNote: Collection
 search_prompt=Search...
 title_prompt=Title
 content_prompt=Content
