--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -1,4 +1,5 @@
 overview_title=NetNote: Overzicht
+collection_overview_title=NetNote: Collectie
 search_prompt=Zoeken...
 title_prompt=Titel
 content_prompt=Inhoud
