--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -1,4 +1,5 @@
 overview_title=NetNote: Prezentare general\u0103
+collection_overview_title=NetNote: Colec\u021bie
 search_prompt=Caut\u0103...
 title_prompt=Titlu
 content_prompt=Con\u021binut
