Add language support to remaining elements

--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -11,3 +11,12 @@ note_not_found=Notitie niet gevonden:
 note_title_empty=De titel van de notitie mag niet leeg zijn.
 note_title_duplicate=Er bestaat al een notitie met deze titel.
 language=Dutch
+saved_prompt=Opgeslagen!
+added_prompt=Toegevoegd!
+deleted_prompt=Verwijderd!
+add_file=Bestand toevoegen
+delete_files=Bestanden verwijderen
+delete_all_files=Alle bestanden verwijderen
+delete_confirmation=Weet je zeker dat je deze notitie wilt verwijderen?
+delete_confirmation_title=Verwijderen bevestigen
+cancel=Annuleren
