--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -11,3 +11,12 @@ note_not_found=Nota nu a fost g\u0103sit\u0103:
 note_title_empty=Titlul notei nu poate fi gol.
 note_title_duplicate=O not\u0103 cu acest titlu deja exist\u0103.
 language=Romanian
+saved_prompt=Salvat!
+added_prompt=Ad\u0103ugat!
+deleted_prompt=\u0219ters!
+add_file=Adaug\u0103 fi\u0219ier
+delete_files=\u0218terge fi\u0219iere
+delete_all_files=\u0218terge toate fi\u0219ierele
+delete_confirmation=E\u0219ti sigur c\u0103 vrei s\u0103 \u0219tergi aceast\u0103 not\u0103?
+delete_confirmation_title=Confirm\u0103 \u0219tergerea
+cancel=Anuleaz\u0103
