--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -11,3 +11,12 @@ note_not_found=Note not found:
 note_title_empty=The note title cannot be empty.
 note_title_duplicate=A note with this title already exists.
 language=English
+saved_prompt=Saved!
+added_prompt=Added!
+deleted_prompt=Deleted!
+add_file=Add file
+delete_files=Delete files
+delete_all_files=Delete all files
+delete_confirmation=Are you sure you want to delete this note?
+delete_confirmation_title=Confirm Delete
+cancel=Cancel
