Add language support for keyboard shortcuts

--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -20,3 +20,20 @@ delete_all_files=Alle bestanden verwijderen
 delete_confirmation=Weet je zeker dat je deze notitie wilt verwijderen?
 delete_confirmation_title=Verwijderen bevestigen
 cancel=Annuleren
+shortcuts_title=Sneltoetsen:
+shortcuts=S+Ctrl: Opslaan of notitie toevoegen \n\
+ESCAPE: Focus op het zoekveld \n\
+Up+Alt: Selecteer de vorige notitie \n\
+Down+Alt: Selecteer de volgende notitie \n\
+T+Ctrl: Focus op het Titelveld \n\
+C+Ctrl: Focus op het Inhoudveld \n\
+D+Ctrl: Verwijderen of wissen \n\
+N+Ctrl: Maak een nieuwe notitie \n\
+M+Ctrl: Open het tagmenu \n\
+X+Ctrl: Wis filters \n\
+B+Ctrl: Schakel het zoekinhoud selectievakje in/uit \n\
+L+Control: Open het taalmenu \n\
+R+Control: Verversen \n\
+C+Alt: Open het Collectiesmenu \n\
+I+Ctrl: Open het Informatiemenu
+information_title=NetNote: Informatie
