Fix language additions

--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -11,3 +11,29 @@ note_not_found=Note not found:
 note_title_empty=The note title cannot be empty.
 note_title_duplicate=A note with this title already exists.
 language=English
+saved_prompt=Saved!
+added_prompt=Added!
+deleted_prompt=Deleted!
+add_file=Add file
+delete_files=Delete files
+delete_all_files=Delete all files
+delete_confirmation=Are you sure you want to delete this note?
+delete_confirmation_title=Confirm Delete
+cancel=Cancel
+shortcuts_title=Keyboard shortcuts:
+shortcuts=S+Ctrl: Save or add note \n\
+ESCAPE: Focus the search field \n\
+Up+Alt: Select the previous note \n\
+Down+Alt: Select the next note \n\
+T+Ctrl: Focus the Title field \n\
+C+Ctrl: Focus the Content field \n\
+D+Ctrl: Delete or clear \n\
+N+Ctrl: Create a new note \n\
+M+Ctrl: Open the tag menu \n\
+X+Ctrl: Clear filters \n\
+B+Ctrl: Toggle the search content checkbox \n\
+L+Control: Open the language menu \n\
+R+Control: Refresh \n\
+C+Alt: Open the Collections menu \n\
+I+Ctrl: Open Information menu
+information_title=NetNote: Information
