--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -11,3 +11,29 @@ note_not_found=Nota nu a fost g\u0103sit\u0103:
 note_title_empty=Titlul notei nu poate fi gol.
 note_title_duplicate=O not\u0103 cu acest titlu deja exist\u0103.
 language=Romanian
+saved_prompt=Salvat!
+added_prompt=Ad\u0103ugat!
+deleted_prompt=\u0219ters!
+add_file=Adaug\u0103 fi\u0219ier
+delete_files=\u0218terge fi\u0219iere
+delete_all_files=\u0218terge toate fi\u0219ierele
+delete_confirmation=E\u0219ti sigur c\u0103 vrei s\u0103 \u0219tergi aceast\u0103 not\u0103?
+delete_confirmation_title=Confirm\u0103 \u0219tergerea
+cancel=Anuleaz\u0103
+shortcuts_title=Scurt\u0103turi de la tastatur\u0103:
+shortcuts=S+Ctrl: Salveaz\u0103 sau adaug\u0103 o not\u0103 \n\
+ESCAPE: Focalizeaz\u0103 c\u00e2mpul de c\u0103utare \n\
+Up+Alt: Selecteaz\u0103 nota anterioar\u0103 \n\
+Down+Alt: Selecteaz\u0103 nota urm\u0103toare \n\
+T+Ctrl: Focalizeaz\u0103 c\u00e2mpul Titlu \n\
+C+Ctrl: Focalizeaz\u0103 c\u00e2mpul Con\u021binut \n\
+D+Ctrl: \u0218terge sau cur\u0103\u021b\u0103 \n\
+N+Ctrl: Creeaz\u0103 o not\u0103 nou\u0103 \n\
+M+Ctrl: Deschide meniul de etichete \n\
+X+Ctrl: Cur\u0103\u021b\u0103 filtrele \n\
+B+Ctrl: Comut\u0103 caseta de selectare con\u021binut c\u0103utare \n\
+L+Control: Deschide meniul de limb\u0103 \n\
+R+Control: Re\u00eemprosp\u0103teaz\u0103 \n\
+C+Alt: Deschide meniul Colec\u021bii \n\
+I+Ctrl: Deschide meniul Informa\u021bii
+information_title=NetNote: Informa\u021bii
