Add translations to collection alerts

--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -37,3 +37,8 @@ R+Control: Refresh \n\
 C+Alt: Open the Collections menu \n\
 I+Ctrl: Open Information menu
 information_title=NetNote: Information
+collection_title_empty=Collection Title cannot be empty
+collection_title_exists=Collection Title already exists
+collection_name_empty=Collection Name cannot be empty
+collection_name_exists=Collection Name already exists
+invalid_server=Invalid Server URL
