--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -37,3 +37,8 @@ R+Control: Verversen \n\
 C+Alt: Open het Collectiesmenu \n\
 I+Ctrl: Open het Informatiemenu
 information_title=NetNote: Informatie
+collection_title_empty=Collectietitel mag niet leeg zijn
+collection_title_exists=Collectietitel bestaat al
+collection_name_empty=Collectienaam mag niet leeg zijn
+collection_name_exists=Collectienaam bestaat al
+invalid_server=Ongeldige server-URL
