--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -37,3 +37,8 @@ R+Control: Re\u00eemprosp\u0103teaz\u0103 \n\
 C+Alt: Deschide meniul Colec\u021bii \n\
 I+Ctrl: Deschide meniul Informa\u021bii
 information_title=NetNote: Informa\u021bii
+collection_title_empty=Titlul colec\u021biei nu poate fi gol
+collection_title_exists=Titlul colec\u021biei exist\u0103 deja
+collection_name_empty=Numele colec\u021biei nu poate fi gol
+collection_name_exists=Numele colec\u021biei exist\u0103 deja
+invalid_server=URL-ul serverului este invalid
