--- a/client/src/main/resources/client/localization/labels_el.properties
+++ b/client/src/main/resources/client/localization/labels_el.properties
@@ -37,4 +37,9 @@ R+Control: \u0391\u03BD\u03B1\u03BD\u03AD\u03C9\u03C3\u03B7 \n\
 C+Alt: \u0386\u03BD\u03BF\u03B3\u03BC\u03B1 \u03C4\u03BF\u03C5 \u03BC\u03B5\u03BD\u03BF\u03CD \u03C3\u03C5\u03BB\u03BB\u03BF\u03B3\u03CE\u03BD \n\
 I+Ctrl: \u0386\u03BD\u03BF\u03B3\u03BC\u03B1 \u03C4\u03BF\u03C5 \u03BC\u03B5\u03BD\u03BF\u03CD \u03C0\u03BB\u03B7\u03C1\u03BF\u03C6\u03BF\u03C1\u03B9\u03B1\u03BA\u03CC\u03BD \u03BC\u03B5\u03BD\u03BF\u03CD
 information_title=NetNote: \u03A0\u03BB\u03B7\u03C1\u03BF\u03C6\u03BF\u03C1\u03B9\u03B5\u03C2
+collection_title_empty=\u03a4\u03bf \u03a4\u03af\u03c4\u03bb\u03bf \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc
+collection_title_exists=\u03a4\u03bf \u03a4\u03af\u03c4\u03bb\u03bf \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7 \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9
+collection_name_empty=\u03a4\u03bf \u038c\u03bd\u03bf\u03bc\u03b1 \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc
+collection_name_exists=\u03a4\u03bf \u038c\u03bd\u03bf\u03bc\u03b1 \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7 \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9
+invalid_server=\u039c\u03b7 \u03ad\u03b3\u03ba\u03c5\u03c1\u03bf URL \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae
 
