Prevent duplicate servers to ensure consistency

--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -42,3 +42,4 @@ collection_title_exists=Collection Title already exists
 collection_name_empty=Collection Name cannot be empty
 collection_name_exists=Collection Name already exists
 invalid_server=Invalid Server URL
+duplicate_server=Server already exists
