--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -42,3 +42,5 @@ collection_title_exists=Collectietitel bestaat al
 collection_name_empty=Collectienaam mag niet leeg zijn
 collection_name_exists=Collectienaam bestaat al
 invalid_server=Ongeldige server-URL
+duplicate_server=Server bestaat al
+
