--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -42,3 +42,4 @@ collection_title_exists=Titlul colec\u021biei exist\u0103 deja
 collection_name_empty=Numele colec\u021biei nu poate fi gol
 collection_name_exists=Numele colec\u021biei exist\u0103 deja
 invalid_server=URL-ul serverului este invalid
+duplicate_server=Serverul deja exist\u0103
