--- a/client/src/main/resources/client/localization/labels_el.properties
+++ b/client/src/main/resources/client/localization/labels_el.properties
@@ -42,4 +42,5 @@ collection_title_exists=\u03a4\u03bf \u03a4\u03af\u03c4\u03bb\u03bf \u03c3\u03c5
 collection_name_empty=\u03a4\u03bf \u038c\u03bd\u03bf\u03bc\u03b1 \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03cc
 collection_name_exists=\u03a4\u03bf \u038c\u03bd\u03bf\u03bc\u03b1 \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ae\u03b4\u03b7 \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9
 invalid_server=\u039c\u03b7 \u03ad\u03b3\u03ba\u03c5\u03c1\u03bf URL \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae
+duplicate_server=\u039F \u03B4\u03B9\u03B1\u03BA\u03BF\u03BC\u03B9\u03C3\u03C4\u03AE\u03C2 \u03C5\u03A0\u03AC\u03C1\u03A7\u03B5\u03B9 \u03AE\u03B4\u03B7
 
