Add translations for collection menu

--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -43,4 +43,11 @@ collection_name_empty=Collectienaam mag niet leeg zijn
 collection_name_exists=Collectienaam bestaat al
 invalid_server=Ongeldige server-URL
 duplicate_server=Server bestaat al
+collection_title=Titel:
+collection_server=Server:
+collection_name=Collectie:
+collection_status=Status:
+collection_status_exists=Collectie Bestaat
+collection_save=Opslaan
+collection_make_default=Standaard Maken
 
