--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -43,3 +43,10 @@ collection_name_empty=Collection Name cannot be empty
 collection_name_exists=Collection Name already exists
 invalid_server=Invalid Server URL
 duplicate_server=Server already exists
+collection_title=Title:
+collection_server=Server:
+collection_name=Collection:
+collection_status=Status:
+collection_status_exists=Collection Exists
+collection_save=Save
+collection_make_default=Make Default
