--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -43,3 +43,10 @@ collection_name_empty=Numele colec\u021biei nu poate fi gol
 collection_name_exists=Numele colec\u021biei exist\u0103 deja
 invalid_server=URL-ul serverului este invalid
 duplicate_server=Serverul deja exist\u0103
+collection_title=Titlu:
+collection_server=Server:
+collection_name=Colec\u021bie:
+collection_status=Stare:
+collection_status_exists=Colec\u021bia Exist\u0103
+collection_save=Salveaz\u0103
+collection_make_default=F\u0103 Implicit
