Add translations for embedded files

--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -50,3 +50,11 @@ collection_status=Status:
 collection_status_exists=Collection Exists
 collection_save=Save
 collection_make_default=Make Default
+file_delete_button=Delete
+file_rename_button=Rename
+file_download_button=Download
+file_rename_title=Rename file
+file_rename_prompt=New file name: 
+file_save_title=Save file
+ok_button=OK
+cancel_button=Cancel
