--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -50,4 +50,12 @@ collection_status=Status:
 collection_status_exists=Collectie Bestaat
 collection_save=Opslaan
 collection_make_default=Standaard Maken
+file_delete_button=Verwijderen
+file_rename_button=Hernoemen
+file_download_button=Downloaden
+file_rename_title=Bestand hernoemen
+file_rename_prompt=Nieuwe bestandsnaam:
+file_save_title=Bestand opslaan
+ok_button=OK
+cancel_button=Annuleren
 
