--- a/client/src/main/resources/client/localization/labels_el.properties
+++ b/client/src/main/resources/client/localization/labels_el.properties
@@ -50,3 +50,11 @@ collection_status=\u039a\u03b1\u03c4\u03ac\u03c3\u03c4\u03b1\u03c3\u03b7:
 collection_status_exists=\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae
 collection_save=\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 collection_make_default=\u039f\u03c1\u03af\u03c3\u03c4\u03b5 \u039a\u03b1\u03c4\u03ac \u03a0\u03c1\u03bf\u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae
+file_delete_button=\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
+file_rename_button=\u039c\u03b5\u03c4\u03bf\u03bd\u03bf\u03bc\u03b1\u03c3\u03af\u03b1
+file_download_button=\u039b\u03ae\u03c8\u03b7
+file_rename_title=\u039c\u03b5\u03c4\u03bf\u03bd\u03bf\u03bc\u03b1\u03c3\u03af\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
+file_rename_prompt=\u039d\u03ad\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5:
+file_save_title=\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
+ok_button=\u0395\u03BD\u03C4\u03AC\u03BE\u03B5\u03B9
+cancel_button=\u0386\u03BA\u03C5\u03C1\u03BF
