--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -50,3 +50,12 @@ collection_status=Stare:
 collection_status_exists=Colec\u021bia Exist\u0103
 collection_save=Salveaz\u0103
 collection_make_default=F\u0103 Implicit
+file_delete_button=\u0218terge
+file_rename_button=Redenumire
+file_download_button=Desc\u0103rcare
+file_rename_title=Redenumire fi\u0219ier
+file_rename_prompt=Nume nou pentru fi\u0219ier:
+file_save_title=Salvare fi\u0219ier
+ok_button=OK
+cancel_button=Anulare
+
