Translation support for server error

--- a/client/src/main/resources/client/localization/labels_en.properties
+++ b/client/src/main/resources/client/localization/labels_en.properties
@@ -58,3 +58,4 @@ file_rename_prompt=New file name:
 file_save_title=Save file
 ok_button=OK
 cancel_button=Cancel
+server_down_redirect=Server not available. Switching to default collection
