--- a/client/src/main/resources/client/localization/labels_nl.properties
+++ b/client/src/main/resources/client/localization/labels_nl.properties
@@ -58,4 +58,4 @@ file_rename_prompt=Nieuwe bestandsnaam:
 file_save_title=Bestand opslaan
 ok_button=OK
 cancel_button=Annuleren
-
+server_down_redirect=Server niet beschikbaar. Overschakelen naar de standaardcollectie
