--- a/client/src/main/resources/client/localization/labels_ro.properties
+++ b/client/src/main/resources/client/localization/labels_ro.properties
@@ -58,4 +58,4 @@ file_rename_prompt=Nume nou pentru fi\u0219ier:
 file_save_title=Salvare fi\u0219ier
 ok_button=OK
 cancel_button=Anulare
-
+server_down_redirect=Server indisponibil. Comutare la colec\u021Bia implicit\u0103
