--- a/client/src/main/resources/client/localization/labels_el.properties
+++ b/client/src/main/resources/client/localization/labels_el.properties
@@ -58,3 +58,4 @@ file_rename_prompt=\u039d\u03ad\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03b1\u03c
 file_save_title=\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
 ok_button=\u0395\u03BD\u03C4\u03AC\u03BE\u03B5\u03B9
 cancel_button=\u0386\u03BA\u03C5\u03C1\u03BF
+server_down_redirect=O \u03B4\u03B9\u03B1\u03BA\u03BF\u03BC\u03B9\u03C3\u03C4\u03AE\u03C2 \u03B4\u03B5\u03BD \u03B5\u03AF\u03BD\u03B1\u03B9 \u03B4\u03B9\u03B1\u03B8\u03AD\u03C3\u03B9\u03BC\u03BF\u03C2. \u039C\u03B5\u03C4\u03AC\u03B2\u03B1\u03C3\u03B7 \u03C3\u03C4\u03B7\u03BD \u03C0\u03C1\u03BF\u03B5\u03C0\u03B9\u03B2\u03BB\u03B7\u03C0\u03B3\u03BC\u03AD\u03BD\u03B7 \u03C3\u03C5\u03BB\u03B3\u03CC\u03B3\u03B7
